--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <link rel="stylesheet" href="style.css">
 
 <body background="bg1.jpg">
+    <center>
     <canvas id="myCanvas" height="600" width="800"></canvas>
+        <br>
+        <br>
     <span>
         Color-
     </span>
@@ -17,6 +20,7 @@
         Width of the line -
     </span>
     <input type="text" id="widthOfLine">
+</center>
     <script src="main.js"></script>
 </body>
 
